Moving to Java 17